--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,10 @@
 
     <EditText
         android:id="@+id/editTextText"
-        android:layout_width="286dp"
-        android:layout_height="120dp"
+        android:layout_width="306dp"
+        android:layout_height="77dp"
         android:ems="10"
         android:inputType=""
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -31,10 +30,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="61dp"
-        android:layout_height="49dp"
+        android:layout_width="59dp"
+        android:layout_height="153dp"
         android:layout_marginTop="71dp"
-        android:text="Button"
+        android:text="Ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
